Add loaders to load svgs and images

--- a/src/Layout.styl
+++ b/src/Layout.styl
@@ -1,3 +1,9 @@
 .container
-  color red
+  color darkblue
   font-weight bold
+  text-align center
+
+.logo
+  width 100px
+  height 100px
+  fill darkcyan
